# Video-Crop

./: README.md  gui.py  pyproject.toml
